tests/ui/associated-types/associated-types-eq-1.stderr
error[E0425]: cannot find type `A` in this scope
  --> $DIR/associated-types-eq-1.rs:10:12
   |
LL |     let _: A = x.boo();
   |            ^
   |
help: you might have meant to use an associated type of the same name
   |
LL |     let _: I::A = x.boo();
   |            +++
help: you might be missing a type parameter
   |
LL | fn foo2<I: Foo, A>(x: I) {
   |               +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
